--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+
 body{
-    font-family: crimson text regular!important;
+    font-family: Crimson Text regular!important;
     margin: 0;
     overflow-x: hidden;
     max-width: 100%;
@@ -88,8 +90,7 @@ footer ul{
     padding: 0;
     list-style-type: none;
     color: #eee;
-    width: 23%;
-    margin-right: 2%;
+    width: 25%;
     
 }
 
@@ -102,6 +103,21 @@ footer a{
     text-decoration: none;
 }
 
+.footer-icon{
+    margin-right: 12px;
+    width: 12px;
+    
+}
+
+.footer-text{
+  font-size: 28px;  
+}
+
+.text-footer{
+  margin-left: 17px;  
+  color: white;
+  font-size: 14px;  
+}
 
 
 
