--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,50 @@ header {
   padding: 154px 0 100px;
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  
+}
+
+.service-img {
+    display: block; 
+    margin: auto;
+    height: 40%;
+    margin-bottom: 20px;
+}
+
+.service-headline{
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.service-text{
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 60px;
+}
+
+.header-red{
+    text-align: center;
+    color: #801630;
+    margin-bottom: 60px;
+}
+
+.red-img{
+   display: block; 
+   margin: auto;
+   height: 150px;
+   margin-bottom: 40px;
+   text-align: center;
+}
+
+.img-lines{
+    max-height: 250px;
+}
+
+
 @media (min-width: 992px) {
   header {
     padding: 156px 0 100px;
@@ -42,6 +86,8 @@ section {
   padding: 10px;
 }
 
+
+
 .left, .right {
   width: 25%;
 }
@@ -52,7 +98,30 @@ section {
   margin-right: 15%;    
 }
 
+.services-underline {
+    border-bottom: 2px solid black;
+    margin-bottom: 10px;
+    padding-bottom: -5px;
+}
 
+.icons-underline {
+    border-bottom: 2px solid black;
+    
+}
+
+
+.blog-img {
+   height: 51px; 
+}
+
+.middle-services {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+.middle-image-services {
+   width: 100%; 
+}
 
 
 /* Clear floats after the columns */
