--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+
 body{
-    font-family: crimson text regular!important;
+    font-family: Crimson Text regular!important;
     margin: 0;
     overflow-x: hidden;
     max-width: 100%;
@@ -15,6 +17,50 @@ body{
 header {
   padding: 154px 0 100px;
 }
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  
+}
+
+.service-img {
+    display: block; 
+    margin: auto;
+    height: 40%;
+    margin-bottom: 20px;
+}
+
+.service-headline{
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.service-text{
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 60px;
+}
+
+.header-red{
+    text-align: center;
+    color: #801630;
+    margin-bottom: 60px;
+}
+
+.red-img{
+   display: block; 
+   margin: auto;
+   height: 150px;
+   margin-bottom: 40px;
+   text-align: center;
+}
+
+.img-lines{
+    max-height: 250px;
+}
+
 
 @media (min-width: 992px) {
   header {
@@ -40,6 +86,8 @@ section {
   padding: 10px;
 }
 
+
+
 .left, .right {
   width: 25%;
 }
@@ -50,7 +98,30 @@ section {
   margin-right: 15%;    
 }
 
+.services-underline {
+    border-bottom: 2px solid black;
+    margin-bottom: 10px;
+    padding-bottom: -5px;
+}
 
+.icons-underline {
+    border-bottom: 2px solid black;
+    
+}
+
+
+.blog-img {
+   height: 51px; 
+}
+
+.middle-services {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+.middle-image-services {
+   width: 100%; 
+}
 
 
 /* Clear floats after the columns */
@@ -88,8 +159,7 @@ footer ul{
     padding: 0;
     list-style-type: none;
     color: #eee;
-    width: 23%;
-    margin-right: 2%;
+    width: 25%;
     
 }
 
@@ -102,6 +172,21 @@ footer a{
     text-decoration: none;
 }
 
+.footer-icon{
+    margin-right: 12px;
+    width: 12px;
+    
+}
+
+.footer-text{
+  font-size: 28px;  
+}
+
+.text-footer{
+  margin-left: 17px;  
+  color: white;
+  font-size: 14px;  
+}
 
 
 
